# whatchadoin

./: AGENT.md  index.html  package-lock.json  package.json
docs/: UI.md  concept.md  implement.md
docs/superpowers/plans/: 2026-05-31-ai-agent-pipeline.md
docs/superpowers/specs/: 2026-05-31-agent-pipeline-task-tracking-design.md
src/: App.css  App.tsx  CheckInWindow.css  CheckInWindow.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app-service/: Cargo.toml
src-tauri/crates/app-service/src/: db.rs  lib.rs
src-tauri/crates/collection/: Cargo.toml
src-tauri/crates/collection/src/: lib.rs
src-tauri/crates/core-shared/: Cargo.toml
src-tauri/crates/core-shared/src/: lib.rs
src-tauri/crates/processing/: Cargo.toml
src-tauri/crates/processing/src/: lib.rs
src-tauri/crates/processing/src/ai/: mod.rs
src-tauri/crates/processing/src/api/: mod.rs
src-tauri/crates/processing/src/session/: mod.rs
src-tauri/src/: lib.rs  main.rs
src/app-view/: App.css  App.tsx  main.tsx
src/components/: LeftSidebar.tsx  ReportView.tsx  RightSidebar.tsx  TaskKanban.tsx  WorkView.tsx
src/popup-view/: Popup.tsx  main.tsx
