# 워크스페이스 루트 겸 tauri-main(조립기) 바이너리 패키지.
# 라이브러리 크레이트는 crates/ 하위에 위치한다.
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "whatchadoin"
version = "0.1.0"
description = "업무 밀도 트래커"
authors = ["kunwo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whatchadoin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }

# 내부 크레이트 (tauri-main이 조립)
app-service = { path = "crates/app-service" }
processing = { path = "crates/processing" }
collection = { path = "crates/collection" }
core-shared = { path = "crates/core-shared" }

